tweaks / fixes for dark mode (VERY PARTIAL TEENY TINY)

--- a/src/components/button.scss
+++ b/src/components/button.scss
@@ -15,6 +15,7 @@ $_border-height: 4px;
 
   align-items: center;
   border: 0;
+  color: var(--color-black);
   cursor: pointer;
   font-family: var(--font-family);
   font-size: var(--font-size-1);
