--- a/src/config/scss/_colors.scss
+++ b/src/config/scss/_colors.scss
@@ -67,25 +67,43 @@ $white: #fbfffd;
 }
 
 @media (prefers-color-scheme: dark) {
-  $_dark-primary: adjust-color($primary, $lightness: -31%);
-  $_dark-gray: adjust-color($gray, $lightness: -31%);
+  $_dark-primary: adjust-color($primary, $lightness: -20%);
+  $_dark-gray: adjust-color($gray, $lightness: -20%);
+  $_dark-yellow: adjust-color($yellow, $lightness: -20%);
 
+  // TODO: While inverting the pallete works ok, fine tuning this a bit more might be better
+  // E.G. Tactile buttons are still tactile I guess but look stranger.
+  // E.G. Yellow is a fucking disaster
   :root {
-    --color-primary_-3: #{adjust-color($_dark-primary, $lightness: -30%)};
-    --color-primary_-2: #{adjust-color($_dark-primary, $lightness: -20%)};
-    --color-primary_-1: #{adjust-color($_dark-primary, $lightness: -10%)};
+    --color-primary_-3: #{adjust-color($_dark-primary, $lightness: 30%)};
+    --color-primary_-2: #{adjust-color($_dark-primary, $lightness: 20%)};
+    --color-primary_-1: #{adjust-color($_dark-primary, $lightness: 10%)};
     --color-primary_0: #{$_dark-primary};
-    --color-primary_1: #{adjust-color($_dark-primary, $lightness: 10%)};
-    --color-primary_2: #{adjust-color($_dark-primary, $lightness: 20%)};
-    --color-primary_3: #{adjust-color($_dark-primary, $lightness: 30%)};
+    --color-primary_1: #{adjust-color($_dark-primary, $lightness: -10%)};
+    --color-primary_2: #{adjust-color($_dark-primary, $lightness: -20%)};
+    --color-primary_3: #{adjust-color($_dark-primary, $lightness: -30%)};
 
-    --color-gray_-3: #{adjust-color($_dark-gray, $lightness: -30%)};
-    --color-gray_-2: #{adjust-color($_dark-gray, $lightness: -20%)};
-    --color-gray_-1: #{adjust-color($_dark-gray, $lightness: -10%)};
+    --color-gray_-6: #{adjust-color($_dark-gray, $lightness: 40%)};
+    --color-gray_-5: #{adjust-color($_dark-gray, $lightness: 35%)};
+    --color-gray_-4: #{adjust-color($_dark-gray, $lightness: 28%)};
+    --color-gray_-3: #{adjust-color($_dark-gray, $lightness: 21%)};
+    --color-gray_-2: #{adjust-color($_dark-gray, $lightness: 14%)};
+    --color-gray_-1: #{adjust-color($_dark-gray, $lightness: 7%)};
     --color-gray_0: #{$_dark-gray};
-    --color-gray_1: #{adjust-color($_dark-gray, $lightness: 10%)};
-    --color-gray_2: #{adjust-color($_dark-gray, $lightness: 20%)};
-    --color-gray_3: #{adjust-color($_dark-gray, $lightness: 30%)};
+    --color-gray_1: #{adjust-color($_dark-gray, $lightness: -7%)};
+    --color-gray_2: #{adjust-color($_dark-gray, $lightness: -14%)};
+    --color-gray_3: #{adjust-color($_dark-gray, $lightness: -21%)};
+    --color-gray_4: #{adjust-color($_dark-gray, $lightness: -28%)};
+    --color-gray_5: #{adjust-color($_dark-gray, $lightness: -35%)};
+    --color-gray_6: #{adjust-color($_dark-gray, $lightness: -40%)};
+
+    --color-yellow_-3: #{adjust-color($_dark-yellow, $lightness: 30%)};
+    --color-yellow_-2: #{adjust-color($_dark-yellow, $lightness: 20%)};
+    --color-yellow_-1: #{adjust-color($_dark-yellow, $lightness: 10%)};
+    --color-yellow_0: #{$_dark-yellow};
+    --color-yellow_1: #{adjust-color($_dark-yellow, $lightness: -10%)};
+    --color-yellow_2: #{adjust-color($_dark-yellow, $lightness: -20%)};
+    --color-yellow_3: #{adjust-color($_dark-yellow, $lightness: -30%)};
 
     --color-black: #{$white};
     --color-white: #{$black};
