--- a/src/layout/list.scss
+++ b/src/layout/list.scss
@@ -10,7 +10,7 @@
   grid-template-columns: 1fr;
   margin: 0;
   padding: 0;
-  margin-top: var(--font-size-1);
+  margin-top: var(--font-size-2);
   gap: var(--font-size-2);
 
   &._col-2 {
