--- a/src/layout/section.scss
+++ b/src/layout/section.scss
@@ -8,6 +8,9 @@
 .section {
   display: block;
   padding: calc(var(--font-size-1) * 6) calc(var(--font-size-1) * 8);
+  position: relative;
+  overflow-x: hidden;
+  z-index: 1;
 
   @media screen and (max-width: breakpoints.$large) {
     padding: calc(var(--font-size-1) * 5) calc(var(--font-size-1) * 5);
@@ -20,6 +23,19 @@
   @media screen and (max-width: breakpoints.$small) {
     padding: calc(var(--font-size-1) * 3) calc(var(--font-size-1) * 0.75);
   }
+
+  // &::before {
+  //   content: "";
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 95%;
+  //   height: 95%;
+  //   pointer-events: none;
+  //   z-index: -1;
+  //   background: grey;
+  //   transform: rotate(2deg);
+  // }
 
   @include color.apply("background-color");
 }
